examples/Passing/If/missing_return.c
int main() {
    int a = 5;
    if (a == 5) 
        return 5;
}
