examples/Failing/Compound/missing_brace.c
int main() {
    int a = 5;
    {
        a = 10;
    return a;
}
